fix : 기업 정보 랭크 기능 추가